--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.16",
     "@types/node": "^20.12.7",
+    "axios": "^1.6.8",
     "classnames": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0"
